--- a/Project_MobileStore/package.json
+++ b/Project_MobileStore/package.json
@@ -18,19 +18,24 @@
     "axios": "^1.7.7",
     "emailjs-com": "^3.2.0",
     "expo": "~51.0.28",
+    "expo-av": "~14.0.7",
     "expo-image-manipulator": "~12.0.5",
     "expo-image-picker": "~15.0.7",
     "expo-status-bar": "~1.12.1",
     "firebase": "^10.13.1",
     "react": "18.2.0",
     "react-native": "0.74.5",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "^2.19.0",
     "react-native-image-picker": "^7.1.2",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-paper": "^5.12.5",
+    "react-native-ratings": "^8.1.0",
     "react-native-safe-area-context": "^4.10.9",
     "react-native-screens": "^3.34.0",
-    "tailwind-react-native-classnames": "^3.0.1"
+    "react-native-svg": "^15.7.1",
+    "tailwind-react-native-classnames": "^3.0.1",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
